--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             if (username && password) {
                 // Redirect to another page when fields are filled
-                window.location.href = 'index.html'; // Change this to your desired webpage
+                window.location.href = 'Beranda.html'; // Change this to your desired webpage
             } else {
                 // Alert user if fields are empty
                 alert('Please fill in both Username and Password.');
